# better-inventree-label-sheet

./: .gitignore  README.md  pyproject.toml
advanced_sheet_label/: printing_plugin.py
better_label_printer/: layouts.py  printing_plugin.py  views.py
better_label_printer/static/: LayoutsPanel.js
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: LayoutsPanel.tsx
