[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "better-inventree-label-sheet"
version = "1.3.1"
authors = [
  { name="melektron", email="matteo@elektron.work" },
]
description = "A label printing plugin for InvenTree which provides support for printing labels on off-the-shelf label sheet layouts and adds some more useful features."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/melektron/better-inventree-label-sheet"
Issues = "https://github.com/melektron/better-inventree-label-sheet/issues"

[tool.setuptools]
packages = ["advanced_sheet_label"]

[tool.pyright]
pythonVersion = "3.9"
reportIncompatibleVariableOverride = false

[project.entry-points."inventree_plugins"]
AdvancedSheetLabel = 'advanced_sheet_label.printing_plugin:AdvancedLabelSheetPlugin'
