[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "better-inventree-label"
version = "2.0.0"
authors = [
  { name="suheyldroid" },
  { name="melektron", email="matteo@elektron.work" },
]
description = "A flexible label printing plugin for InvenTree. Prints labels on off-the-shelf label sheet layouts and adds editable layouts and additional printing controls."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/suheyldroid/better-inventree-label-sheet"
Issues = "https://github.com/suheyldroid/better-inventree-label-sheet/issues"

[tool.setuptools]
packages = ["better_label_printer"]

[tool.pyright]
pythonVersion = "3.9"
reportIncompatibleVariableOverride = false

[project.entry-points."inventree_plugins"]
BetterLabelPrinter = 'better_label_printer.printing_plugin:BetterLabelPrinterPlugin'
